# fastoser

./: .env  Dockerfile  Makefile  README.md  alembic.ini  entrypoint.sh  example.env  pyproject.toml
docker-compose/: app.yaml  storage.yaml
src/app/: main.py
src/app/application/cqrs/user/: command.py
src/app/application/services/: user.py
src/app/application/use_cases/: user.py
src/app/domain/base/: entities.py  entity.py  exception.py  uow.py  value_object.py
src/app/domain/user/: dto.py  entities.py  entity.py  exception.py  repository.py  service.py  value_object.py
src/app/infrastructure/config/: settings.py
src/app/infrastructure/database/: dto.py  manager.py  uow.py
src/app/infrastructure/database/alembic/: env.py
src/app/infrastructure/database/alembic/versions/: 826e8bf9bec6_initial_migration.py
src/app/infrastructure/database/models/: __init__.py  base.py  dto.py  mixin.py  user.py
src/app/infrastructure/database/repositories/: user.py
src/app/presentation/rest/v1/: router.py
src/app/presentation/rest/v1/user/: dto.py  schemas.py  views.py
src/core/config/: settings.py
src/domain/base/: entities.py  errors.py  value_objects.py
src/domain/user/: commands.py  entities.py  errors.py  services.py  use_cases.py  value_objects.py
src/infrastructure/: db.py
src/infrastructure/postgresql/: db.py
src/services/: user.py
